# video-on-demand-on-aws

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy-lambda.yml
deployment/: build-s3-dist.sh  video-on-demand-on-aws.yml
source/custom-resource/lib/mediaconvert/: index.js
source/custom-resource/lib/mediaconvert/templates/: 1080p_avc_aac_16x9.json  1080p_avc_aac_16x9_mvod.json  1080p_avc_aac_16x9_mvod_no_preset.json  1080p_avc_aac_16x9_qvbr.json  1080p_avc_aac_16x9_qvbr_no_preset.json  2160p_avc_aac_16x9.json  2160p_avc_aac_16x9_mvod.json  2160p_avc_aac_16x9_mvod_no_preset.json  2160p_avc_aac_16x9_qvbr.json  2160p_avc_aac_16x9_qvbr_no_preset.json  720p_avc_aac_16x9.json  720p_avc_aac_16x9_mvod.json  720p_avc_aac_16x9_mvod_no_preset.json  720p_avc_aac_16x9_qvbr.json  720p_avc_aac_16x9_qvbr_no_preset.json
source/custom-resource/lib/mediapackage/: index.spec.js
source/encode/: index.js
source/media-package-assets/lib/: index.spec.js
source/mediainfo/: README.md  lambda_function.py  setup.py  test_compact.py  test_parser.py
source/output-validate/lib/: index.spec.js
