[tool.poetry]
name = "video-on-demand-on-aws"
version = "0.1.0"
description = ""
authors = ["Frans Ramirez <franscaraveli@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
black = "^21.8b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
